--- a/SentirseWellApi.csproj
+++ b/SentirseWellApi.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>5038005f-a5c0-49d2-93d4-a4ba8e2c1ba0</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
