feat: implementación de QR

--- a/appsettings.json
+++ b/appsettings.json
@@ -31,7 +31,7 @@
     "FromEmail": "Spa Sentirse Bien <noreply@yourdomain.com>"
   },
   "QRCode": {
-    "BaseUrl": "https://localhost:7000/api/qr",
+    "BaseUrl": "http://localhost:5018/api/qr",
     "DefaultExpirationMinutes": 60
   },
   "CORS": {
