Lógica de logueo con google

--- a/appsettings.json
+++ b/appsettings.json
@@ -43,5 +43,8 @@
       "http://localhost:9002",
       "https://localhost:9002"
     ]
+  },
+  "Frontend": {
+    "BaseUrl": "http://localhost:3000"
   }
 }
